--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@ layout: default
       <div class="post">
         <header class="post-header">
           <h1 class="post-title">
-            <h1 class="post-title">{{ page.title }}</h1>
+            <h1 class="post-title"><strong>Oscar<strong> Wu</h1>
             <h5 class="post-description">{{ page.description }}</h5>
            <!-- {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %} -->
           </h1>
