--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@ layout: default
       <div class="post">
         <header class="post-header">
           <h1 class="post-title">
-            <h1 class="post-title"><strong>Oscar<strong> Wu</h1>
+            <h2><span class="font-weight-bold">Oscar</span> Wu</h2>
             <h5 class="post-description">{{ page.description }}</h5>
            <!-- {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %} -->
           </h1>
@@ -44,19 +44,19 @@ layout: default
 
           <!-- News -->
           {% if page.news -%}
-            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            <h3><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h3>
             {%- include news.html %}
           {%- endif %}
 
           <!-- Latest posts -->
           {% if page.latest_posts -%}
-            <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h2>
+            <h3><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h3>
             {%- include latest_posts.html %}
           {%- endif %}
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
+            <h3><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h3>
             {%- include selected_papers.html %}
           {%- endif %}
 
