--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -2,16 +2,16 @@
  * Themes
  ******************************************************************************/
  
-:root {
-  --global-bg-color: #{$white-color};
-  --global-code-bg-color: #{$code-bg-color-light};
+ :root {
+  --global-bg-color: #{$bg-color};
+  --global-code-bg-color: #{$code-bg-color-medium};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$link-blue-color};
-  --global-hover-color: #{$link-blue-color};
+  --global-theme-color: #{$theme-color};
+  --global-hover-color: #{$theme-color};
   --global-footer-bg-color: #{$grey-color-dark};
-  --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-text-color: #{$white-color};
+  --global-footer-link-color: #{$theme-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
   --global-card-bg-color: #{$white-color};
