--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,10 +5,10 @@
 
 
 // Colors
+$rbo1-color:          #cbc6c6 !default;
 $red-color:           #FF3636 !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
-$link-blue-color:    #368fdc !default;
 $blue-color:          #0076df !default;
 $blue-color-dark:     #00369f !default;
 $cyan-color:          #2698BA !default;
@@ -26,14 +26,18 @@ $yellow-color:        #efcc00 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
+$grey-color-lighter:   lighten($grey-color-light, 60%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
+
+$bg-color: #f2f2f2 !default;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
 
-// Theme colors
-
-$code-bg-color-light:     rgba($purple-color, 0.05);
+// Theme colors, only need to edit value of theme-color
+$theme-color: #b71c1c;
+$code-bg-color-light:     rgba($theme-color, 0.01);
+$code-bg-color-medium:     rgba($code-bg-color-light, 0.06);
 $code-bg-color-dark:      #2c3237 !default;
