--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,9 +24,9 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color:          #828282 !default;
-$grey-color-light:    lighten($grey-color, 40%);
-$grey-color-lighter:   lighten($grey-color-light, 60%);
+$grey-color:          #5c5b5b !default;
+$grey-color-light:    lighten($grey-color, 60%);
+$grey-color-lighter:   lighten($grey-color-light, 80%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
