--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,8 +6,8 @@ layout: default
       <div class="post">
         <header class="post-header">
           <h1 class="post-title">
-            <h2><span class="font-weight-bold">Oscar</span> Wu</h2>
-            <h5 class="post-description">{{ page.description }}</h5>
+            <h2><span class="font-weight-bold">Øscar</span> Wu</h2>
+            <h3 class="post-description" style="color : #5c5b5b">{{ page.description }}</h3>
            <!-- {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %} -->
           </h1>
           <p class="desc">{{ page.subtitle }}</p>
