--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,7 +5,7 @@
  :root {
   --global-bg-color: #{$bg-color};
   --global-code-bg-color: #{$code-bg-color-medium};
-  --global-text-color: #{$grey-color-dark};
+  --global-text-color: #{$grey-900};
   --global-text-color-light: #{$grey-color-lighter};
   --global-theme-color: #{$theme-color};
   --global-hover-color: #{$theme-color};
