--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,9 +24,10 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color-lighter:   #828282 !default;
+$grey-color-lighter:   #898686 !default;
 $grey-color-light:    #7c7c7c !default;
-$grey-color:          #5c5b5b !default;
+$grey-color:          #636363 !default;
+$grey-oscar:          #333333 !default;
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
@@ -41,3 +42,10 @@ $theme-color: #b71c1c;
 $code-bg-color-light:     rgba($theme-color, 0.01);
 $code-bg-color-medium:     rgba($code-bg-color-light, 0.06);
 $code-bg-color-dark:      #2c3237 !default;
+
+
+// Font Family
+$global-font-family: Helvetica, Arial, sans-serif;
+
+// Font Weight
+$global-font-weight: 60;
