adjusted font-weight of  post-description

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,9 +24,10 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color-lighter:   #898686 !default;
+$grey-color-lighter:  #898686 !default;
 $grey-color-light:    #7c7c7c !default;
 $grey-color:          #636363 !default;
+$grey-color-desc:     #8f8f8f !default;
 $grey-oscar:          #333333 !default;
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
