--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,7 +7,7 @@ layout: default
         <header class="post-header">
           <h1 class="post-title">
             <h2><span class="font-weight-bold">Øscar</span> Wu</h2>
-            <h3 class="post-description" style="color : #5c5b5b">{{ page.description }}</h3>
+            <h3 class="post-description" style="color : #8f8f8f; font-weight:350">{{ page.description }}</h3>
            <!-- {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %} -->
           </h1>
           <p class="desc">{{ page.subtitle }}</p>
@@ -44,19 +44,19 @@ layout: default
 
           <!-- News -->
           {% if page.news -%}
-            <h3><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h3>
+            <h3><a href="{{ '/news/' | relative_url }}" style="color: inherit;">News</a></h3>
             {%- include news.html %}
           {%- endif %}
 
           <!-- Latest posts -->
           {% if page.latest_posts -%}
-            <h3><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h3>
+            <h3><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest Posts</a></h3>
             {%- include latest_posts.html %}
           {%- endif %}
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h3><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h3>
+            <h3><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Selected Publications</a></h3>
             {%- include selected_papers.html %}
           {%- endif %}
 
