--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -46,7 +46,7 @@ $code-bg-color-dark:      #2c3237 !default;
 
 
 // Font Family
-$global-font-family: Helvetica, Arial, sans-serif;
+$global-font-family: 'Roboto', sans-serif;
 
 // Font Weight
-$global-font-weight: 60;
+$global-font-weight:  300;
