--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -14,6 +14,10 @@
     <!-- Page/Post style -->
     <style type="text/css">
       {{ page._styles }}
+      /* Custom CSS for distill title size */
+      d-title h1 {
+        font-size: 1.95rem;
+      }
     </style>
     {%- endif %}
   </head>
